2009-06-04  Mihnea Ovidenie  <mihnea@adobe.com>

Reviewed by Darin Adler.

        Bug 26084: Multiple missing images in webkit-mask-image prevent rendering
        https://bugs.webkit.org/show_bug.cgi?id=26084

        When painting multiple images, make sure that at least one image is valid before pushing a transparency layer.

        Added a manual test.

        * manual-tests/mask-composite-missing-images.html: Added.
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::paintMaskImages):



Canonical link: https://commits.webkit.org/36253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44422 268f45cc-cd09-0410-ab3c-d52691b4dbfc